fix(Calendar): hide cell items when height is too small

--- a/src/routes/Calendar/Table/Cell/Cell.less
+++ b/src/routes/Calendar/Table/Cell/Cell.less
@@ -126,6 +126,14 @@
     }
 }
 
+@media only screen and (max-height: @xxsmall) {
+    .cell {
+        .items {
+            display: none;
+        }
+    }
+}
+
 @media only screen and (max-width: @minimum) and (orientation: portrait) {
     .cell {
         .items {
